--- a/02-css-intro/forms-example.html
+++ b/02-css-intro/forms-example.html
@@ -15,6 +15,7 @@
         Last name: <input type="text" name="lastname"><br>
         <input type="submit" value="Submit">
     </form>
+    <p class="error">This is a warning!</p>
 </body>
 
 </html>
