--- a/02-css-intro/external-example.html
+++ b/02-css-intro/external-example.html
@@ -4,6 +4,9 @@
 <head>
     <title>Hello World</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" 
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"  
+          crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 
